add search and down-menu

--- a/index.html
+++ b/index.html
@@ -23,13 +23,32 @@
                     <nav>
                         <ul class="menu">
                           <li><a href="">Home</a></li>
-                          <li><a href="">Products</a></li>
+                          <li><a href="">Products</a>
+                              <ul class="lower-menu">
+                                    <li><a href="">Lorem ipsun dolor</a></li>
+                                    <li><a href="">Sit amet</a></li>
+                                    <li><a href="">Consectetur adipisicing</a></li>
+                                    <li><a href="">Tempor incididunt</a></li>
+                                    <li><a href="">Dolore magna aliqua</a></li>
+                                    <li><a href="">Ut enim ad minim veriam</a></li>
+                                    <li><a href="">Quis nostrud</a></li>
+                              </ul>      
+                          </li>
                           <li><a href="">Payment</a></li>
                           <li><a href="">Shipping </a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-3">search</div>
+                <div class="col-3">
+                    <div>
+                        <form action="">
+                            <input type="text" class="form" placeholder="Search">
+                            <button class="search"><img src="image/search.png" alt=""></button>
+                            <button class="buy"><img src="image/buy.png" alt=""></button>
+                            <button id="four">4</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
