--- a/index.html
+++ b/index.html
@@ -40,14 +40,22 @@
                     </nav>
                 </div>
                 <div class="col-3">
-                    <div>
-                        <form action="">
-                            <input type="text" class="form" placeholder="Search">
-                            <button class="search"><img src="image/search.png" alt=""></button>
-                            <button class="buy"><img src="image/buy.png" alt=""></button>
-                            <button id="four">4</button>
-                        </form>
-                    </div>
+                   <div class="row">
+                        <div class="col-9">
+                            <form action="" class="form-search-header">
+                                <input type="text">
+                                <button></button>
+                            </form>
+                        </div>
+                        <div class="clo-3">
+                            <div class="cart-header">
+
+                            </div>
+                            <div class="cart-count">
+                                
+                            </div>
+                        </div>
+                   </div>
                 </div>
             </div>
         </div>
