--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-6">
                     <nav>
                         <ul class="menu">
-                          <li><a href="">Home</a></li>
+                          <li><a href="">Home 1</a></li>
                           <li><a href="">Products</a>
                               <ul class="lower-menu">
                                     <li><a href="">Lorem ipsun dolor</a></li>
@@ -52,7 +52,7 @@
 
                             </div>
                             <div class="cart-count">
-                                
+
                             </div>
                         </div>
                    </div>
