--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <nav>
                         <ul class="menu">
                           <li><a href="">Home 1</a></li>
-                          <li><a href="">Products</a>
+                          <li><a href="">Products 2</a>
                               <ul class="lower-menu">
                                     <li><a href="">Lorem ipsun dolor</a></li>
                                     <li><a href="">Sit amet</a></li>
