--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
                     <nav>
                         <ul class="menu">
                           <li><a href="">Home 1</a></li>
-                          <li><a href="">Products 2</a>
-                              <ul class="lower-menu">
-                                    <li><a href="">Lorem ipsun dolor</a></li>
-                                    <li><a href="">Sit amet</a></li>
-                                    <li><a href="">Consectetur adipisicing</a></li>
-                                    <li><a href="">Tempor incididunt</a></li>
-                                    <li><a href="">Dolore magna aliqua</a></li>
-                                    <li><a href="">Ut enim ad minim veriam</a></li>
-                                    <li><a href="">Quis nostrud</a></li>
-                              </ul>      
+                          <li><a href="" class="activ-downmenu">Products 2 </a>
+                                <img class="icon" src="image/icon down (2).png" alt="">
+                                    <ul class="lower-menu">
+                                        <li><a href="">Lorem ipsun dolor</a></li>
+                                        <li><a href="">Sit amet</a></li>
+                                        <li><a href="">Consectetur adipisicing</a></li>
+                                        <li><a href="">Tempor incididunt</a></li>
+                                        <li><a href="">Dolore magna aliqua</a></li>
+                                        <li><a href="">Ut enim ad minim veriam</a></li>
+                                        <li><a href="">Quis nostrud</a></li>
+                                    </ul>      
                           </li>
                           <li><a href="">Payment</a></li>
                           <li><a href="">Shipping </a></li>
@@ -43,16 +44,14 @@
                    <div class="row">
                         <div class="col-9">
                             <form action="" class="form-search-header">
-                                <input type="text">
-                                <button></button>
+                                <input type="text" placeholder="Search">
+                                <button> <img src="image/search.png" alt=""></button>
                             </form>
                         </div>
                         <div class="clo-3">
                             <div class="cart-header">
-
-                            </div>
-                            <div class="cart-count">
-
+                                <img src="image/buy.png" alt="">
+                                <div class="product-count">0</div>
                             </div>
                         </div>
                    </div>
@@ -60,7 +59,18 @@
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
+    <main class="main">
+        <div class="slide"></div>
+        <div class="col-9">
+            <div class="row">
+                <div class="col-3">
+                    <div class="PC">
+                        <img src="image/PC.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer class="footer">Footer</footer>
 </body>
 </html>
