--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="col-6">
                     <nav>
                         <ul class="menu">
-                          <li><a href="">Home 1</a></li>
-                          <li><a href="" class="activ-downmenu">Products 2 </a>
+                          <li><a href="">Home </a></li>
+                          <li class="li"><a href="" class="activ-downmenu">Products</a>
                                 <img class="icon" src="image/icon down (2).png" alt="">
                                     <ul class="lower-menu">
                                         <li><a href="">Lorem ipsun dolor</a></li>
@@ -51,7 +51,7 @@
                         <div class="clo-3">
                             <div class="cart-header">
                                 <img src="image/buy.png" alt="">
-                                <div class="product-count">0</div>
+                                <div class="product-count">4</div>
                             </div>
                         </div>
                    </div>
@@ -59,17 +59,71 @@
             </div>
         </div>
     </header>
+    <div class="slider"></div>
     <main class="main">
-        <div class="slide"></div>
-        <div class="col-9">
+        <div class="conteiner">
             <div class="row">
-                <div class="col-3">
-                    <div class="PC">
-                        <img src="image/PC.png" alt="">
+                <div class="col-3">Filter</div>
+                <div class="col-9">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="">Home page ></a>
+                            <a href="">Products ></a>
+                            <a href="">Laptops and Tablets</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-8">
+                            <div><h2>Laptop and Tablets</h2></div>
+                        </div>
+                        <div class="col-4">
+                            <div class="all-menu-sort">
+                                <ul class="menu-sort">
+                                    <li><a href="">sort by price</a>
+                                        <ul class="submenu-sort">
+                                            <li><a href="">sort by name</a></li>
+                                            <li><a href="">sort by date</a></li>
+                                            <li><a href="">sort by popularity</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/PC.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#1 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$599 <span>25</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
+                        <div class="col-4">Product</div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  
     </main>
     <footer class="footer">Footer</footer>
 </body>
