--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <div class="slider"></div>
     <main class="main">
-        <div class="conteiner">
+        <div class="container">
             <div class="row">
                 <div class="col-3">Filter</div>
                 <div class="col-9">
@@ -112,14 +112,174 @@
                                 <button class="button-cart">ADD TO CART</button>
                             </div>
                         </div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
-                        <div class="col-4">Product</div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/product2.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#2 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$1250 <span>99</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/watch.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#3 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$399 <span>50</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/notebook.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#3 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$599 <span>25</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/player.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#2 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$1250 <span>99</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/phone.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#3 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$399 <span>50</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/tablet.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#3 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$599 <span>25</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/product8.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#2 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$1250 <span>99</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="image/watch2.png" alt="">
+                                    <div class="zoom">
+                                        <button></button>
+                                    </div>
+                                    <div class="like">
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="product-title"><h2>#3 Device Name</h2></div>
+                                <div class="product-description">Lorem ipsum dolor sit <br/> amet consectetur, <br/> adipisicing elit.</div>
+                                <div class="product-features"><span>Type:</span>Laptop</div>
+                                <div class="product-features"><span>Screen size:</span>7 inches</div>
+                                <div class="product-features"><span>Ram:</span>1 GB</div>
+                                <div class="product-price">$399 <span>50</span></div>
+                                <button class="button-details">MORE DETAILS</button>
+                                <button class="button-cart">ADD TO CART</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
