--- a/index.html
+++ b/index.html
@@ -63,7 +63,43 @@
     <main class="main">
         <div class="container">
             <div class="row">
-                <div class="col-3">Filter</div>
+                <div class="col-3">
+                        <div class="row">
+                            <h2>DEVACE TYPE</h2>
+                            <input type="checkbox" id="Laptop">
+                            <label for="Laptop" class="label">Laptop</label>
+                            <input type="checkbox" id="tablet">
+                            <label for="tablet" class="label">Tablet</label>
+                        </div>   
+                        <div class="row">
+                            <h2>COLOR</h2>
+                            <input type="checkbox" id="black">
+                            <label for="black" class="label">Black</label>
+                            <input type="checkbox" id="red">
+                            <label for="red" class="label">Red</label>
+                            <input type="checkbox" id="green">
+                            <label for="green" class="label">Green</label>
+                            <input type="checkbox" id="blue">
+                            <label for="blue" class="label">Blue</label>
+                            <input type="checkbox" id="orange">
+                            <label for="orange" class="label">Orange</label>
+                        </div> 
+                        <div class="row">
+                            <h2>RAM</h2>
+                            <input type="checkbox" id="one-gb">
+                            <label for="one-gb" class="label">1 GB</label>
+                            <input type="checkbox" id="two-gb">
+                            <label for="two-gb" class="label">2 GB</label>
+                            <input type="checkbox" id="four-gb">
+                            <label for="four-gb" class="label">4 GB</label>
+                            <input type="checkbox" id="six-gb">
+                            <label for="six-gb" class="label">6 GB</label>
+                            <input type="checkbox" id="eight-gb">
+                            <label for="eight-gb" class="label">8 GB</label>
+                            <p>Show more options...</p>
+                        </div>
+                        <div class="button-filter">SUBMIT</div>
+                </div>
                 <div class="col-9">
                     <div class="row">
                         <div class="col-12">
